--- a/app/globals.css
+++ b/app/globals.css
@@ -30,4 +30,10 @@ body {
   body main {
     @apply font-mono bg-slate-950 text-slate-400;
   }
+  h1 {
+    @apply text-2xl md:text-4xl;
+  }
+  h2 {
+    @apply text-xl md:text-3xl;
+  }
 }
